# closured

./: .gitignore  Cargo.toml  README.md  flake.nix
closured/: Cargo.toml  build.rs
closured-common/: Cargo.toml
closured-common/src/: lib.rs
closured-ebpf/: Cargo.toml  build.rs
closured-ebpf/src/: main.rs  vmlinux.rs
closured/src/: main.rs
nix/: module.nix
