[workspace]
resolver = "2"
members = [
    "closured",
    "closured-common",
    "closured-ebpf",
]
default-members = ["closured", "closured-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { version = "0.14.0", default-features = false }
aya-build = { version = "0.2.0", default-features = false }
aya-ebpf = { version = "0.2.1", default-features = false }
aya-log = { version = "0.3.0", default-features = false }
aya-log-ebpf = { version = "0.2.0", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[patch.crates-io]
aya = { git = "https://github.com/aya-rs/aya" }
aya-obj = { git = "https://github.com/aya-rs/aya" }
aya-ebpf = { git = "https://github.com/aya-rs/aya" }

[profile.release.package.closured-ebpf]
debug = 2
codegen-units = 1
strip = false
