[package]
name = "closured-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
closured-common = { path = "../closured-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "closured"
path = "src/main.rs"
